--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -3,9 +3,9 @@ name: 1-actions-ci-cd-aks
 on:
   push:
     branches: [ main ]
-    paths: .github/workflows/1-actions-ci-cd-aks.yml
+    paths: [.github/workflows/1-actions-ci-cd-aks.yml]
   pull_request:
-    branches:  none # [ main ]
+    branches:  [none] # [ main ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -30,17 +30,6 @@ jobs:
       run:
         docker build ./MvcApp/ --file ./MvcApp/Dockerfile --tag $DOCKER_REPOSITORY/$IMAGE_NAME:$GITHUB_RUN_NUMBER --build-arg=token=ZGEzNTQ5Y2QyNjAx --no-cache
 
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      continue-on-error: true
-      with:
-        image-ref: 'docker.io/${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}'
-        format: 'table'
-        exit-code: '1'
-        ignore-unfixed: true
-        vuln-type: 'os,library'
-        severity: 'MEDIUM,HIGH,CRITICAL'
-
     - name: Login to Docker Hub
       run: |
         echo "${{ secrets.DOCKER_REPOSITORY_PASSWORD }}" | docker login -u $DOCKER_REPOSITORY --password-stdin
@@ -51,7 +40,7 @@ jobs:
    
     - uses: cschleiden/replace-tokens@v1
       with:
-        files: '["kubernetes/*.yaml"]'
+        files: '["charts/firstchart/*.yaml"]'
         tokenPrefix: __ # optional, default is #{
         tokenSuffix: __ # optional, default is }#
       env:
