--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Tag Image to DEV Registry
       if: ${{ github.ref == 'refs/heads/main' }}
       run:
-        docker tag $IMAGE_NAME:$GITHUB_RUN_NUMBER $DOCKER_REPOSITORY/$IMAGE_NAME-dev:$GITHUB_RUN_NUMBER
+        docker tag ${{ env.IMAGE_NAME }}-dev:${{ env.IMAGE_TAG }} ${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}-dev:${{ env.IMAGE_TAG }}
 
     - name: Tag Image to UAT Registry
       if: ${{ github.ref == 'refs/heads/release' }}
@@ -62,7 +62,7 @@ jobs:
       if: ${{ github.ref == 'refs/heads/main' }}
       with:
         push: true
-        tags: $DOCKER_REPOSITORY/$IMAGE_NAME-dev:$GITHUB_RUN_NUMBER,$DOCKER_REPOSITORY/$IMAGE_NAME-dev:latest
+        tags: ${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}-dev:${{ env.IMAGE_TAG }},${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}-dev:latest
     - name: Push image to UAT
       uses: docker/build-push-action@v3
       if: ${{ github.ref == 'refs/heads/release' }}
@@ -84,7 +84,7 @@ jobs:
         tokenPrefix: __ # optional, default is #{
         tokenSuffix: __ # optional, default is }#
       env:
-        IMAGE: $DOCKER_REPOSITORY/$IMAGE_NAME-dev:$GITHUB_RUN_NUMBER
+        IMAGE: ${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}-dev:${{ env.IMAGE_TAG }}
     - uses: cschleiden/replace-tokens@v1
       if: ${{ github.ref == 'refs/heads/release' }}
       with:
