--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -39,7 +39,7 @@ jobs:
       with:
         file: ./WebApp/Dockerfile
         context: ./WebApp
-        push: true
+        push: false
         tags: ${{ env.IMAGE_NAME }}-dev:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}-dev:latest
 
     - name: Tag Image to DEV Registry
