--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -120,6 +120,8 @@ jobs:
 
   DEPLOYtoUAT:
     runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.ref == 'refs/heads/main' }}
     environment: UAT
     env:
       CLUSTER_NAME: aks-cluster
