--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -6,6 +6,7 @@ on:
     paths: 
       - .github/workflows/1-actions-ci-cd-aks.yml
       - ./WebApp
+      - ./charts
   pull_request:
     branches:  [none] # [ main ]
   # Allows you to run this workflow manually from the Actions tab
