--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -122,7 +122,7 @@ jobs:
 
 
 
-  DEPLOYtoUAT:
+  DEPLOYtoDEV:
     runs-on: ubuntu-latest
     needs: build
     if: ${{ github.ref == 'refs/heads/main' }}
@@ -166,3 +166,44 @@ jobs:
    #     sleep 30s
    #     kubectl logs job.batch/kube-bench
    #     kubectl delete job.batch/kube-bench
+   
+   
+  DEPLOYtoUAT:
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.ref == 'refs/heads/release' }}
+    environment: UAT
+    env:
+      CLUSTER_NAME: aks-cluster
+      RESOURSE_GROUP: rg-aks-cluster
+    steps:
+    - uses: actions/download-artifact@v3
+      with:
+        name: Helm-charts
+
+    - name: Display structure of downloaded files
+      run: ls -R
+      
+    - name: cat files
+      run: |
+        cat ./firstchart/dev-values.yaml
+
+  DEPLOYtoPROD:
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.ref == 'refs/heads/release' }}
+    environment: UAT
+    env:
+      CLUSTER_NAME: aks-cluster
+      RESOURSE_GROUP: rg-aks-cluster
+    steps:
+    - uses: actions/download-artifact@v3
+      with:
+        name: Helm-charts
+
+    - name: Display structure of downloaded files
+      run: ls -R
+      
+    - name: cat files
+      run: |
+        cat ./firstchart/dev-values.yaml
